--- a/generators/joyent_config/templates/deploy.rb.erb
+++ b/generators/joyent_config/templates/deploy.rb.erb
@@ -5,7 +5,7 @@ set :domain_path, "/users/home/#{user}/domains/<%= domain %>"
 set :deploy_to,   "#{domain_path}/var/www"
 
 set :scm, :git
-set :repository,  "/users/home/matthew/domains/git.matthewtodd.org/var/lib/repos/#{application}.git"
+set :repository,  "/users/home/#{user}/git/#{application}.git"
 set :git_shallow_clone, 1
 set :git_enable_submodules, true
 
