Adjust git parameters to assume a github account.

--- a/generators/joyent_config/templates/deploy.rb.erb
+++ b/generators/joyent_config/templates/deploy.rb.erb
@@ -5,8 +5,9 @@ set :domain_path, "/users/home/#{user}/domains/<%= domain %>"
 set :deploy_to,   "#{domain_path}/var/www"
 
 set :scm, :git
-set :local_repository,  "woodward:git/#{application}.git"
-set :repository,  "/users/home/#{user}/git/#{application}.git"
+set :local_repository, '.git'
+set :repository,  "git://github.com/<%= `git config --get github.user`.strip %>/#{application}.git"
+set :branch, 'master'
 set :git_shallow_clone, 1
 set :git_enable_submodules, true
 
